# pyCOFBuilder

./: .gitignore  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  exemple.py  get_results.py  index.html  pyCOFBuilder_example.ipynb  pyproject.toml  requirements.txt  setup.py  teste.py
.trunk/: trunk.yaml
COF_DataBase/: C3_BENZ_CHO_H-C2_2BPD_NH2_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_3BPD_NH2_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_ANTR_NH2_H_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_BBTZ_NH2_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_BENZ_NH2_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_BPNY_NH2_H_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_BTPH_NH2_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_DBTP_NH2_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_DHPI_NH2_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_DHSI_NH2_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_DPBY_NH2_H_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_DPDA_NH2_H_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_DPEL_NH2_H_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_NAFT_NH2_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_PYRN_NH2_H_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_TPNY_NH2_H_H_H_H_H_H-HCB_A-AA.json  C3_BENZ_CHO_H-C2_TTPH_NH2_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_2BPD_NH2_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_3BPD_NH2_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_ANTR_NH2_H_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_BBTZ_NH2_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_BENZ_NH2_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_BPNY_NH2_H_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_BTPH_NH2_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_DBTP_NH2_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_DHPI_NH2_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_DHSI_NH2_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_DPBY_NH2_H_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_DPDA_NH2_H_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_DPEL_NH2_H_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_NAFT_NH2_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_PYRN_NH2_H_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_TPNY_NH2_H_H_H_H_H_H-HCB_A-AA.json  C3_DICZ_CHO_H_H-C2_TTPH_NH2_H-HCB_A-AA.json  C3_TPAM_CHO_H_H-C2_2BPD_NH2_H_H_H-HCB_A-AA.json  (+101 more)
(+1024 files in other folders)
