# pyproject.toml

[project]
name = "pycofbuilder"
version = '0.0.8.1'
authors = [
  { name="Felipe Lopes", email="felipe.lopes@nano.ufrj.br" },
]
description = 'A package for Covalent Organic Frameworks sturcture creation based on the reticular approach.'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/lipelopesoliveira/pyCOFBuilder"
Issues = "https://github.com/lipelopesoliveira/pyCOFBuilder/issues"
Documentation = "https://lipelopesoliveira.github.io/pyCOFBuilder/docs/_build/html/index.html"